--- a/style.css
+++ b/style.css
@@ -7,5 +7,44 @@
 body {
   font-family: 'Poppins', sans-serif;
   min-height: 100vh;
-  background-color: #d5d5d5;
+  background-color: #fefefe;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn-modal {
+  font-size: 20px;
+  font-weight: 600;
+  text-transform: uppercase;
+  padding: 20px 40px;
+  background-color: #010101;
+  border: 2px solid #010101;
+  border-radius: 6px;
+  color: #fff;
+  transition: background 0.3s;
+  cursor: pointer;
+}
+.btn-modal:hover {
+  background-color: #4169e1;
+}
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+  /* opacity: 0; */
+  opacity: 1;
+}
+.modal__box {
+  position: absolute;
+}
+.box.avtive .overlay {
+  opacity: 1;
+  pointer-events: auto;
 }
