--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   align-items: center;
 }
 .btn {
+  min-width: 130px;
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
@@ -47,9 +48,7 @@ body {
 }
 .modal__box {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  transform: scale(0.5);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -72,6 +71,10 @@ body {
 .box.active .modal__box {
   opacity: 1;
   pointer-events: auto;
+}
+.box.active .modal__box {
+  transform: scale(1);
+  transition: all 0.3s ease;
 }
 .buttons {
   width: 100%;
