--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   transition: background 0.3s;
   cursor: pointer;
 }
-.btn-modal:hover {
+.btn:hover {
   background-color: #4169e1;
 }
 .box.active .btn-modal {
